package org.technbolts.service.user

import org.technbolts.protobuf.{UserPBCommand, UserPBModel}
import UserPBCommand._
import UserPBModel._

class UserPBOService {

  def createUser(command:CreateUser):CreateUserResponse = {
    null
  }

  def deleteUser(command:DeleteUser):DeleteUserResponse = {
    null
  }

  def searchUser(command:SearchUser):SearchUserResponse = {
    null
  }
}